[package]
name = "cn_win_pkg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.18.1"
log = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
walkdir="2"
toml = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
[dev-dependencies]
env_logger = "0.10"